src/test/ui/span/regions-close-over-borrowed-ref-in-obj.nll.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/regions-close-over-borrowed-ref-in-obj.rs:22:27
   |
LL |         let ss: &isize = &id(1);
   |                           ^^^^^ temporary value does not live long enough
...
LL |     }
   |     - temporary value only lives until here
LL | }
   | - borrow later used here, when `blah` is dropped

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
